update module info